--- a/tex/diffgeo/stokes.tex
+++ b/tex/diffgeo/stokes.tex
@@ -425,7 +425,7 @@ We now have all the ingredients to state Stokes' theorem for cells.
 \begin{theorem}
 	[Stokes' theorem for cells]
 	Take $U \subseteq V$ as usual, let $c : [0,1]^k \to U$ be a $k$-cell
-	and let $\alpha : U \to \Lambda^{k-1}(V^\vee)$ be a $k-1$-form.
+	and let $\alpha : U \to \Lambda^{k-1}(V^\vee)$ be a $(k-1)$-form.
 	Then
 	\[ \int_c d\alpha = \int_{\partial c} \alpha. \]
 	In particular, if $d\alpha = 0$ then the left-hand side vanishes.
